docs/v4.0.0/_sources/gallery/extras/properties_sphere.rst.txt

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "gallery/extras/properties_sphere.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        :ref:`Go to the end <sphx_glr_download_gallery_extras_properties_sphere.py>`
        to download the full example code.

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_gallery_extras_properties_sphere.py:


Samples Properties
==================

.. GENERATED FROM PYTHON SOURCE LINES 5-27







.. code-block:: Python


    from PyMieSim.units import ureg

    from PyMieSim.single.scatterer import Sphere
    from PyMieSim.single.source import Gaussian
    from PyMieSim.single.representations import FarField

    source = Gaussian(
        wavelength=1000 * ureg.nanometer,
        polarization=0 * ureg.degree,
        optical_power=1 * ureg.watt,
        NA=0.3 * ureg.AU,
    )

    scatterer = Sphere(
        diameter=800 * ureg.nanometer,
        source=source,
        refractive_index=1.4 * ureg.RIU,
        medium_refractive_index=1.0 * ureg.RIU,
    )

    scatterer.print_properties(4)


.. rst-class:: sphx-glr-timing

   **Total running time of the script:** (0 minutes 0.002 seconds)


.. _sphx_glr_download_gallery_extras_properties_sphere.py:

.. only:: html

  .. container:: sphx-glr-footer sphx-glr-footer-example

    .. container:: sphx-glr-download sphx-glr-download-jupyter

      :download:`Download Jupyter notebook: properties_sphere.ipynb <properties_sphere.ipynb>`

    .. container:: sphx-glr-download sphx-glr-download-python

      :download:`Download Python source code: properties_sphere.py <properties_sphere.py>`

    .. container:: sphx-glr-download sphx-glr-download-zip

      :download:`Download zipped: properties_sphere.zip <properties_sphere.zip>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
